fix chess board too high z-index

--- a/server/src/scss/all-games.scss
+++ b/server/src/scss/all-games.scss
@@ -226,7 +226,7 @@ button:active {
     display: flex;
     flex-direction: row;
     position: relative;
-    z-index: 10;
+    z-index: 101;
     justify-content: space-between;
 }
 
@@ -258,6 +258,7 @@ button:active {
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 100;
 }
 
 .dialog-chip {
